@@ -1,3 +1,13 @@
+Sun Aug 26 21:20:45 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (checked_popen): Remove unnecessary SECURE_MAN_UID
+	  guard; drop_effective_privs/regain_effective_privs already check
+	  this.
+	* src/security.c (remove_with_dropped_privs): Likewise. The uid !=
+	  ruid check is no longer necessary now that
+	  drop_effective_privs/regain_effective_privs handle nesting
+	  correctly.
+
 Sun Aug 26 19:40:12 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (make_roff_command): If MAN_KEEP_FORMATTING is set in
